--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "asbuild:untouched": "asc assembly/index.ts -b build/untouched.wasm -t build/untouched.wat --sourceMap --validate --importMemory --memoryBase 2000000 --use Math=JSMath",
-    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --sourceMap --validate --optimize --noDebug --importMemory --memoryBase 2000000 --use Math=JSMath",
+    "asbuild:optimized": "asc assembly/index.ts -b build/optimized.wasm -t build/optimized.wat --sourceMap --validate -O3  --runPasses  --noDebug --importMemory --memoryBase 2000000 --use Math=JSMath",
     "asbuild": "npm run asbuild:untouched && npm run asbuild:optimized",
     "server": "http-server . -o -c-1"
   },
